Grace/tests/gibbs/errors/t143.grace
// ERROR = P1018
var sum := 1 +
2
